--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,11 @@
 .panda-bg-rose{
     background-color: #FF1D75;
 }
+.categories img{
+    width: 100px;
+}
+.panda-btn{
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    color: #ffffff;
+    border-radius: 5px;
+}
